--- a/backend/app/services/learning/templates/index.html
+++ b/backend/app/services/learning/templates/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>{{ name }}'s Watchlist</title>
+    <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}" type="text/css">
 </head>
 <body>
     <h2>{{ name }}'s Watchlist</h2>
     {# 使用 length 过滤器获取 movies 变量的长度 #}
     <p>{{ movies|length }} Titles</p>
-    <ul>
+    <ul class="movie-list">
         {% for movie in movies %}  {# 迭代 movies 变量 #}
         <li>{{ movie.title }} - {{ movie.year }}</li>  {# 等同于 movie['title'] #}
         {% endfor %}  {# 使用 endfor 标签结束 for 语句 #}
     </ul>
+    <h2>
+        <img alt="Run" class="run" src="{{ url_for('static',filename='images/1.JPG') }}">
+    </h2>>
     <footer>
         <small>&copy; 2018 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
     </footer>
