--- a/backend/app/services/learning/templates/index.html
+++ b/backend/app/services/learning/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{{ name }}'s Watchlist</title>
+    <title>{{ user.name }}'s Watchlist</title>
     <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}" type="text/css">
 </head>
 <body>
-    <h2>{{ name }}'s Watchlist</h2>
+    <h2>{{ user.name }}'s Watchlist</h2>
     {# 使用 length 过滤器获取 movies 变量的长度 #}
     <p>{{ movies|length }} Titles</p>
     <ul class="movie-list">
