--- a/backend/app/services/learning/static/style.css
+++ b/backend/app/services/learning/static/style.css
@@ -14,6 +14,10 @@ footer {
     padding: 10px;
 }
 
+/* 头像 */
+.avatar{
+    width: 40px;
+}
 
 /* 电影列表 */
 .movie-list {
@@ -37,8 +41,46 @@ footer {
 }
 
 /* 图片 */
-.run {
+.totoro {
     display: block;
     margin: 0 auto;
     height: 100px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 8px 12px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
+}
+
+.float-right {
+    float: right;
+}
+
+.imdb {
+    font-size: 12px;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    background: #F5C518;
+    border-radius: 5px;
+    padding: 3px 5px;
 }
